--- a/src/app/component/employee/employee.component.html
+++ b/src/app/component/employee/employee.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <mat-card>
         <mat-card-header>       
-            <button mat-raised-button>+ Add</button>
+            <button mat-raised-button (click)="addEmployee()">+ Add</button>
         </mat-card-header>
         <mat-card-footer>
     
