--- a/src/app/component/addemployee/addemployee.component.html
+++ b/src/app/component/addemployee/addemployee.component.html
@@ -6,8 +6,22 @@
         <mat-card-footer>
             <form action="" [formGroup]="empForm" (ngSubmit)="SaveEmp()">
                 <mat-form-field >
-                    <mat-label>Id</mat-label>
-                    <input matInput>
+                    <mat-label>Name</mat-label>
+                    <input matInput formControlName="name">
+                </mat-form-field>
+                <mat-form-field >
+                    <mat-label>Salary</mat-label>
+                    <input matInput formControlName="salary">
+                </mat-form-field>
+                <mat-form-field >
+                    <mat-label>Date of Join</mat-label>
+                    <input matInput [matDatepicker]="picker">                    
+                    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-datepicker #picker></mat-datepicker>
+                </mat-form-field>
+                <mat-form-field >
+                    <mat-label>Role</mat-label>
+                    <input matInput formControlName="role">
                 </mat-form-field>
             </form>
         </mat-card-footer>
