--- a/src/app/component/addemployee/addemployee.component.html
+++ b/src/app/component/addemployee/addemployee.component.html
@@ -3,7 +3,7 @@
         <mat-card-header>       
            <h2>{{header}}</h2>
         </mat-card-header>
-        <mat-card-footer>
+        <mat-card-content>
             <form action="" [formGroup]="empForm" (ngSubmit)="SaveEmp()">
                 <mat-form-field >
                     <mat-label>Name</mat-label>
@@ -15,15 +15,22 @@
                 </mat-form-field>
                 <mat-form-field >
                     <mat-label>Date of Join</mat-label>
-                    <input matInput [matDatepicker]="picker">                    
+                    <input matInput [matDatepicker]="picker" formControlName="doj">                    
                     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                     <mat-datepicker #picker></mat-datepicker>
                 </mat-form-field>
                 <mat-form-field >
-                    <mat-label>Role</mat-label>
-                    <input matInput formControlName="role">
+                    <mat-label>Role</mat-label>                   
+                    <mat-select formControlName="role">
+                        @for(role of roleValue; track roleValue){
+                            <mat-option [value]="role.value">{{role.viewValue}}</mat-option>
+                        }
+                    </mat-select>
                 </mat-form-field>
             </form>
-        </mat-card-footer>
+        </mat-card-content>
+       <mat-card-actions>
+        <button type="submit" mat-raised-button color="indigo">Save</button>
+       </mat-card-actions>
     </mat-card>
 </div>
