--- a/src/app/component/employee/employee.component.html
+++ b/src/app/component/employee/employee.component.html
@@ -3,8 +3,15 @@
         <mat-card-header>       
             <button mat-raised-button (click)="addEmployee()">+ Add</button>
         </mat-card-header>
-        <mat-card-footer>
-    
-        </mat-card-footer>
+       <mat-card-content>
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+            <ng-container matColumnDef="position">
+                <th mat-header-cell *matHeaderCellDef> No. </th>
+                <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+              </ng-container>
+            
+        </table>
+        
+       </mat-card-content>
     </mat-card>
 </div>
